--- a/scripts/rockspec.in
+++ b/scripts/rockspec.in
@@ -1,24 +1,22 @@
-{% local lfs = require 'lfs' %}
+{% -- DEFAULT TEMPLATE FOR MODULE WITH C++. Original in lub project. %}
+{% 
+local lfs = require 'lfs'
+local lub = require 'lub'
+%}
 package = "{{lib.type}}"
 version = "{{lib.VERSION}}-1"
 source = {
-  url = "http://lubyk.org/archive/{{lib.type}}-REL-{{lib.VERSION}}.tar.gz",
+  url = 'https://github.com/lubyk/{{lib.type}}/archive/REL-{{lib.VERSION}}.tar.gz',
   dir = '{{lib.type}}-REL-{{lib.VERSION}}',
 }
 description = {
-  summary = "Lubyk base module.",
+  summary = "{{def.description.summary}}",
   detailed = [[
-    lub: helper code, class declaration.
-
-    lub.Autoload: autoloading classes in modules.
-
-    lub.Dir: a simple directory traversal class.
-
-    lub.Template: a simple templating class that uses {{moustache}} like syntax.
-  ]],
-  homepage = "http://doc.lubyk.org/{{lib.type}}.html",
-  license = "MIT"
+{{def.description.detailed}}]],
+  homepage = "{{def.description.homepage}}",
+  license = "{{def.description.license}}"
 }
+
 dependencies = {
 {% for _, v in ipairs(lib.DEPENDS) do %}
   "{{v}}",
@@ -34,6 +32,58 @@ build = {
     {{string.format("[%-17s] = '%s/%s.lua'", "'"..lib.type..'.'..file.."'", lib.type, file)}},
 {% end %}
 {% end %}
+{% if not def.pure_lua then %}
+    -- C module
+    {{string.format("[%-17s] = ", "'"..lib.type..".core'")}}{
+      sources = {
+{% for path in lub.Dir('src'):glob('%.c',0) do %}
+        '{{path}}',
+{% end %}
+{% for path in lub.Dir('src/bind'):glob '%.c' do %}
+        '{{path}}',
+{% end %}
+      },
+{% if def.includes and #def.includes > 0 then %}
+      incdirs   = {'{{ lub.join(def.includes, "', '") }}'},
+{% end %}
+{% if def.libraries and #def.libraries > 0 then %}
+      libraries = {'{{ lub.join(def.libraries, "', '") }}'},
+{% end %}
+    },
+{% end %}
   },
+{% if lub.exist(lib.type..'/assets') then %}
+  install = {
+    -- Assets needed by library.
+    lua = {
+{% for path in lub.Dir(lib.type..'/assets'):glob() do %}
+      {{string.format("[%-32s] = '%s'", "'"..string.gsub(string.gsub(path, '%.', '_'), '/', '.').."'", path)}},
+{% end %}
+    },
+  },
+{% end %}
+{% if not def.pure_lua and #def.platspec > 0 then %}
+  platforms = {
+{% for _, plat in ipairs(def.platspec) do %}
+    {{plat}} = {
+      modules = {
+        ['{{lib.type}}.core'] = {
+{% if lub.exist('src/'..plat) then %}
+          sources = {
+{% for path in lub.Dir('src/'..plat):glob '%.c' do %}
+            '{{path}}',
+{% end %}
+          },
+{% end %}
+{% if def.platlibs[plat] then %}
+          libraries = {'{{ lub.join(def.platlibs[plat], "', '") }}'},
+{% end %}
+        },
+      },
+    },
+{% end %}
+  },
+{% end %}
 }
+
 
